<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilRiddleNameUpdate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="106dp"
        android:layout_marginBottom="32dp"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        app:layout_constraintBottom_toTopOf="@+id/tilRiddleContentUpdate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.75">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etRiddleNameUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/riddleItemTitle"
            android:inputType="text"
            android:maxLines="1"
            android:overScrollMode="always"
            android:scrollbarStyle="insideInset"
            android:scrollbars="vertical"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilRiddleContentUpdate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="47dp"
        android:layout_marginBottom="32dp"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        app:layout_constraintBottom_toTopOf="@+id/fabUpdate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.90">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etRiddleContentUpdate"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:hint="@string/riddleContent"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilRiddleAnswerUpdate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="106dp"
        android:layout_marginBottom="8dp"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.75">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etRiddleAnswerUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/riddleAnswer"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:layout_marginEnd="355dp"
        android:layout_marginBottom="475dp"
        android:tint="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_menu_save" />

    <TextView
        android:id="@+id/tvUpdateRiddle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/update_riddle"
        android:textColor="@color/colorWhite"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>